--- a/index.html
+++ b/index.html
@@ -76,8 +76,11 @@
                         <p class="well1"> Welcome to 2 MEN Bank </p>
                         <p class="well2">enter your DEMO Account no</p>
                         <input type="text" class="pass2" maxlength="8">
-                        <button id="btne2">Submit</button>
+                        <button id="btne2">Submit</button><br>
+                        <button id="btne3"><a style="text-decoration: none;" href="loading.html">fingerprint </a>
+                        </button>
                     </div>
+                    <div></div>
                     <div id="all">
 
                         <div class="welcome">
