--- a/loading.html
+++ b/loading.html
@@ -9,4 +9,7 @@
     </div>
     <div class="status">Waiting for fingerprint registered<span class="status__dot">.</span><span
             class="status__dot">.</span><span class="status__dot">.</span></div>
+    <SCRIPT>
+        setTimeout("self.close()", 5000) // after 5 seconds
+    </SCRIPT>
 </main>
