Uploading backend code

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <body>
     <!-- partial:index.partial.html -->
+    <script> 
+    window.alert("Account number:bryan chau           Pin number:99")
+    </script>
     <!DOCTYPE html>
     <html>
 
